# invest_app

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  run.sh
backend/application/: Cargo.toml
backend/application/src/: lib.rs
backend/data-provider/: Cargo.toml
backend/data-provider/src/: lib.rs
backend/data-provider/src/providers/: mod.rs  tushare.rs  yahoo.rs
backend/data/a_stock/: stock.arrow  stock_000001.SZ.arrow  stock_000858.SZ.arrow  stock_002594.SZ.arrow  stock_600519.SH.arrow  stock_601318.SH.arrow
backend/data/us_stock/: stock.arrow
backend/domain/: Cargo.toml
backend/domain/src/: entities.rs  errors.rs  lib.rs  ports.rs
backend/gateway/: Cargo.toml
backend/gateway/src/: key_store.rs  main.rs  routes.rs  server_config.rs  state.rs
backend/provider-tushare/: Cargo.toml
backend/provider-tushare/src/: lib.rs
backend/provider-yahoo/: Cargo.toml
backend/provider-yahoo/src/: lib.rs
backend/storage/: Cargo.toml
backend/storage/src/: lib.rs  store.rs  types.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/application/: data_source.rs  mod.rs  stock_service.rs
frontend/src/domain/: errors.rs  mod.rs
frontend/src/domain/entities/: mod.rs  stock.rs
frontend/src/domain/repositories/: mod.rs  stock_repository.rs
frontend/src/domain/services/: chart_service.rs  mod.rs
frontend/src/infrastructure/: factory.rs  key_api.rs  mod.rs
frontend/src/infrastructure/repositories/: backend_repository.rs  mock_repository.rs  mod.rs
frontend/src/infrastructure/storage/: mod.rs
frontend/src/presentation/: app.rs  mod.rs  view_models.rs
frontend/src/presentation/charts/: mod.rs
frontend/src/presentation/components/: chart_view.rs  dashboard.rs  data_source_selector.rs  data_sync.rs  mod.rs  nav_bar.rs  settings.rs  sidebar.rs  token_vault.rs
