[workspace]
members = [
    "frontend",
    "backend/domain",
    "backend/application",
    "backend/storage",
    "backend/provider-tushare",
    "backend/provider-yahoo",
    "backend/gateway",
]
resolver = "2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1

[profile.dev]
opt-level = 1
