[package]
name = "stock-data-provider"
version = "0.1.0"
edition = "2021"
description = "Stock platform data provider – external API fetchers (Yahoo Finance, Tushare Pro)"

[lib]
name = "stock_data_provider"
path = "src/lib.rs"

[dependencies]
stock-storage = { path = "../storage" }

# HTTP client for external APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1.0"
tracing = "0.1"
