[package]
name        = "stock-domain"
version     = "0.1.0"
edition     = "2021"
description = "Stock platform domain layer – entities, port traits, and domain errors"

[lib]
name = "stock_domain"
path = "src/lib.rs"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "1.0"
async-trait = "0.1"
