[package]
name = "stock-gateway"
version = "0.1.0"
edition = "2021"
description = "Stock platform API gateway – Axum HTTP server (WebSocket-ready)"

[[bin]]
name = "stock-gateway"
path = "src/main.rs"

[dependencies]
stock-domain      = { path = "../domain" }
stock-application = { path = "../application" }
stock-storage     = { path = "../storage" }
provider-tushare  = { path = "../provider-tushare" }
provider-yahoo    = { path = "../provider-yahoo" }

# Web framework
axum       = { version = "0.7", features = ["json", "ws"] }
tokio      = { version = "1",   features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encrypted key store
aes-gcm = "0.10"
rand    = "0.8"
base64  = "0.22"

# Utilities
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
