[package]
name = "stock-storage"
version = "0.1.0"
edition = "2021"
description = "Stock platform storage layer – Apache Arrow columnar persistence"

[lib]
name = "stock_storage"
path = "src/lib.rs"

[dependencies]
# Apache Arrow – columnar persistent database (IPC file format)
arrow = { version = "53", default-features = false, features = ["prettyprint", "ipc"] }

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono    = { version = "0.4", features = ["serde"] }
anyhow    = "1.0"
thiserror = "1.0"
tracing   = "0.1"
